<resources>
    <string name="app_name">Practical1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_must_sign_in_to_join">You must sign in to join</string>
    <string name="email_or_username">Email or Username</string>
    <string name="uname_mail_com">Uname@mail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple_id">Sign in with Apple id</string>
    <string name="no_worries_we_ll_send_you_reset_instructions">No worries, we’ll send you reset instructions</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="notification">We can’t seem to find the right email address for you resend the email that you have registered</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="home_page">Home Page</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="title">TITLE :   </string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="entert_discription_here">Entert Discription here</string>
    <string name="category">Category :   </string>
    <string name="enter_category_here">Enter Category here</string>
    <string name="add_product">Add Product</string>
    <string name="all_product_list">All Product List</string>
</resources>